<resources>

    <string name="app_name">YubiKit Sample</string>
    <string name="nav_header_title">YubiKit Sample</string>
    <string name="nav_header_subtitle">YubiKit SDK demo application</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_mgmt">Device Configuration</string>
    <string name="menu_otp">YubiOTP</string>
    <string name="menu_piv">PIV</string>
    <string name="menu_web">WebView</string>
    <string name="menu_oath">OATH</string>
    <string name="menu_client_certs">Client certificates</string>

    <string name="need_yubikey">Plug in you YubiKey or tap over NFC reader</string>
    <string name="hold_key">Hold your key flat until operation is completed</string>
    <string name="remove_key">Remove YubiKey now</string>
    <string name="app_missing">Application missing or disabled</string>

    <string name="pin">PIN</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="placeholder_text">Lorem ipsum dolor sit amet</string>
    <string name="save">Save</string>
    <string name="randomize">randomize</string>

    <string name="transport_usb">USB</string>
    <string name="transport_nfc">NFC</string>

    <string name="application_otp">OTP</string>
    <string name="application_u2f">FIDO U2F</string>
    <string name="application_piv">PIV</string>
    <string name="application_fido2">FIDO2</string>
    <string name="application_pgp">OpenPGP</string>
    <string name="application_oath">OATH</string>

    <string name="piv_enter_mgmt_key">Enter Management Key</string>
    <string name="piv_mgmt_key_hint">Management Key (hex)</string>
    <string name="piv_no_cert">No certificate loaded</string>
    <string name="piv_authentication">Authentication</string>
    <string name="piv_signature">Digital Signature</string>
    <string name="piv_key_mgmt">Key Management</string>
    <string name="piv_card_auth">Card Authentication</string>
    <string name="piv_delete">Delete</string>
    <string name="piv_attest">Attest</string>
    <string name="piv_generate_ec_cert">Generate EC256</string>
    <string name="piv_generate_rsa_cert">Generate RSA2048</string>
    <string name="piv_import_cert">Import</string>
    <string name="piv_message_hint">Message</string>
    <string name="piv_sign">Sign</string>
    <string name="piv_sign_desc">Sign a message with the private key</string>
    <string name="piv_certificate_desc">Certificate actions</string>
    <string name="piv_webview">WebView</string>

    <string name="mgmt_subtitle">Enable/disable applications</string>

    <string name="otp_yubiotp">Yubico OTP</string>
    <string name="otp_chalresp">Challenge-response</string>
    <string name="otp_public_id">Public ID (modhex)</string>
    <string name="otp_yubiotp_desc">Program a Yubico OTP.\nWARNING: Overwriting a slot can NOT be undone!</string>
    <string name="otp_private_id">Private ID (hex)</string>
    <string name="otp_aes_key">AES key (hex)</string>
    <string name="otp_hmac_key">HMAC-SHA1 key (hex)</string>
    <string name="otp_hmac_challenge">Challenge (hex)</string>
    <string name="otp_read_yubiotp">Read Yubico OTP</string>
    <string name="otp_read_yubiotp_desc">Read a Yubico OTP from a YubiKey over USB or NFC</string>
    <string name="otp_slot_1">Slot 1 (short press)</string>
    <string name="otp_slot_2">Slot 2 (long press)</string>
    <string name="otp_chalresp_desc">Program a challenge-response credential.\nWARNING: Overwriting a slot can NOT be undone!</string>
    <string name="otp_calculate_response">Calculate response</string>
    <string name="otp_chalresp_desc_2">Calculate a response from a slot</string>
    <string name="otp_require_touch">Require touch</string>
    <string name="otp_program">Program</string>
    <string name="otp_use">Use</string>

    <string name="oath_credentials">Credentials</string>
    <string name="oath_key">Secret (hex)</string>
    <string name="oath_issuer">Credential issuer</string>
    <string name="oath_add">Add new credential</string>

    <string name="client_certs_info_header_1">Client SSL certificate demo</string>
    <string name="client_certs_info_header_2">Prepare YubiKey</string>
    <string name="client_certs_info_header_3">Test client certificate</string>

    <string name="client_certs_info_par_1">This screen shows how to use PIV JCA implementation of YubiKey to connect to sites which require client SSL certificate, this example uses client.badssl.com.</string>
    <string name="client_certs_info_par_2">1. Download cert from https://badssl.com/download/
\n2. Import it into a YubiKey PIV slot</string>
    <string name="client_certs_info_par_3"> click to go to test site</string>
    <string name="client_certs_info_par_4">\u2022 test site will start loading
\n\u2022 the app will ask for YubiKey
\n\u2022 tap the NFC key or connect it via USB
\n\u2022 list of PIV certs from the YubiKey is presented
\n\u2022 select correct certificate
\n\u2022 if asked for PIN, provide it
\n\u2022 if asked for YubiKey, provide it
\n\u2022 test site loads successfully
    </string>
    <string name="client_certs_info_par_5">show this help</string>

    <string name="client_certs_url">https://client.badssl.com</string>
    <string name="client_certs_help_description">Screen help</string>
    <string name="client_certs_go_description">Go to test site</string>

    <string name="client_certs_dialog_title_insert_key">Insert YubiKey</string>
    <string name="client_certs_dialog_msg_insert_key">Insert or tap your YubiKey</string>
    <string name="client_certs_dialog_msg_insert_key_now">Insert or tap your YubiKey now</string>
    <string name="client_certs_dialog_msg_nfc_hold">Hold your YubiKey still</string>
    <string name="client_certs_dialog_msg_nfc_remove">Remove your YubiKey</string>
    <string name="client_certs_dialog_enter_pin">Enter PIV PIN</string>
    <string name="client_certs_dialog_select_cert">Select a client certificate</string>
    <string name="client_certs_dialog_title_read_certs">Read PIV certificates</string>

    <string name="about">About</string>
    <string name="about_app">YubiKit is a library provided by Yubico for interacting with YubiKeys.
        This demo app showcases some of the capabilities of the library.
        \n\nTo read more about the YubiKey and its supported application, visit https://www.yubico.com
        \n\nFor the iOS version of YubiKit, visit https://github.com/Yubico/yubikit-ios
    </string>
    <string name="yubico">Yubico</string>
    <string name="version">Version %s</string>
    <string name="copyright">Copyright © 2019–2020 Yubico.</string>

</resources>