<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_mgmt">

    <fragment
        android:id="@+id/nav_mgmt"
        android:name="com.yubico.yubikit.android.app.ui.mgmt.MgmtFragment"
        android:label="@string/menu_mgmt"
        tools:layout="@layout/fragment_mgmt" />

    <fragment
        android:id="@+id/nav_otp"
        android:name="com.yubico.yubikit.android.app.ui.otp.OtpFragment"
        android:label="@string/menu_otp"
        tools:layout="@layout/fragment_otp" />

    <fragment
        android:id="@+id/nav_piv"
        android:name="com.yubico.yubikit.android.app.ui.piv.PivFragment"
        android:label="@string/menu_piv"
        tools:layout="@layout/fragment_piv" />

    <fragment
        android:id="@+id/nav_oath"
        android:name="com.yubico.yubikit.android.app.ui.oath.OathFragment"
        android:label="@string/menu_oath"
        tools:layout="@layout/fragment_oath" />
</navigation>